// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CommercialCanaries stack matches the Australia CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in ap-southeast-2 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/CODE",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_code",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/CODE/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-southeast-2:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+CODE-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Australia PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in ap-southeast-2 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/PROD",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_prod",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/PROD/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-southeast-2:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+PROD-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in ca-central-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/CODE",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_code",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/CODE/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ca-central-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+CODE-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in ca-central-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/PROD",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_prod",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/PROD/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ca-central-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+PROD-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Europe CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in eu-west-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/CODE",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_code",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/CODE/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:eu-west-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+CODE-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Europe PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in eu-west-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/PROD",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_prod",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/PROD/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:eu-west-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+PROD-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in us-west-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/CODE",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_code",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/CODE/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:us-west-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+CODE-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "BuildId": {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Low success rate for canary in us-west-1 over the last 10 minutes.
See https://metrics.gutools.co.uk/d/degb6prp5nqpsc/canary-status for details",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successRate",
          },
          {
            "Id": "successPercentRaw",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "CanaryName",
                    "Value": {
                      "Ref": "Canary11957FE2",
                    },
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary11957FE2": {
      "Properties": {
        "ArtifactS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://cw-syn-results-",
              {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/PROD",
            ],
          ],
        },
        "Code": {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": {
            "Fn::Join": [
              "",
              [
                "cw-syn-canary-",
                {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "CanaryServiceRoleD132250E",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "commercial_canary_prod",
        "ProvisionedResourceCleanup": "AUTOMATIC",
        "RunConfig": {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "CanaryServiceRoleD132250E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:ListAllMyBuckets",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "s3:GetBucketLocation",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1",
                      ],
                    ],
                  },
                },
                {
                  "Action": "s3:PutObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::cw-syn-results-",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/PROD/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": {
                    "StringEquals": {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:CreateLogGroup",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:us-west-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "canaryPolicy",
          },
        ],
        "Tags": [
          {
            "Key": "buildId",
            "Value": {
              "Ref": "BuildId",
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": {
      "Properties": {
        "Endpoint": "commercial.canaries+PROD-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          {
            "Key": "Stack",
            "Value": "frontend",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
